Cambio de repositorio.

--- a/santjoans/war/proyecto.html
+++ b/santjoans/war/proyecto.html
@@ -233,7 +233,7 @@ el <b>Antic Escorxador de Cinctorres</b> como parte de la programación del
 Al ayuntamiento de Cinctorres por darnos todas las facilidades.
 <p>A Juan Luis Bort y Alejandro Pérez a los que he tenido que recurrir en numerosas ocasiones.</p> 
 <h2><a name="software">Software (información para desarrolladores)</a></h2>
-<P>Puedes encontrar el codigo fuente de este software <a href="http://code.google.com/p/santjoans-gwt/" target="_blank">aqui</a>.</P>
+<P>Puedes encontrar el codigo fuente de este software <a href="https://github.com/jtpadilla/santjoans" target="_blank">aqui</a>.</P>
 <P>Este software ha sido desarrollado mediante <a href="http://code.google.com/intl/en/webtoolkit/" target="_blank">GWT de Google</a> utilizando además las librerias 
 <a href="http://code.google.com/p/google-web-toolkit-incubator/" target="_blank">google-web-toolkit-incubator</a> y 
 <a href="http://code.google.com/p/gwt-image-loader/" target="_blank">GWT Image loader</a>.
